fix(plugin-hdfsreader): read the parquet and orc files other engines write
why: the value decoding of both readers understood only what this project writes itself.
     parquet timestamps were read as INT96 only, decimals as a fixed length byte array
     only, the element type of a list came from the first value of the row, and a parquet
     timestamp column was handed on as a date. orc looked a configured type up by its raw
     name, so `integer`, `long`, `tinyint`, `varchar(10)` or `array<string>` threw, a file
     read without a column list failed on every tinyint, smallint and array column, and a
     date was decoded through an instant in the default zone, which is a day early west of
     UTC. one value the declared type cannot hold abandoned the rest of a parquet file, and
     the reader that only needs the schema of a file was never closed.
what: resolve the columns of a file once instead of on every cell, and decode from the
      schema: INT96 and INT64 timestamps in millis, micros and nanos, decimals held in an
      int32, an int64 or a fixed byte array, the elements of a list and the values of a map
      from their own field, and a date as the calendar day it is. add JavaType.of() for the
      spellings the writer side accepts, aliases, parameters and generics included, and
      report a type or an index the file cannot serve while the columns are resolved rather
      than once per row. collect a row that a declared type cannot hold as dirty data and
      keep reading, the way the orc side and the writer already do, and close the parquet
      file that only provides the schema.
impact: parquet and orc files written by Spark, Hive or Arrow are readable, and an addax
        written array<string> or map<string,int> column round trips. a column the file
        cannot serve fails at start up with a configuration error instead of collecting one
        dirty record per row behind a job that reports success. orc booleans and parquet
        timest